--- a/website.css
+++ b/website.css
@@ -53,7 +53,6 @@ a{
 	letter-spacing: 2px;
 	text-align: center;
     padding-top: 30px;
-    padding-bottom: 30px;
 }
 #nav_bar a{
 	margin-left: 7px;
@@ -62,8 +61,7 @@ a{
 #nav_bar a:hover{
 	color: #D8625D;
 	transition: color .3s;
-	-webkit-transition:: color .3s;
-
+	-webkit-transition: color .3s;
 }
 .white_nav_links{
 	color: white;
@@ -72,7 +70,6 @@ footer{
 	background-color: #1D2022;
 	color: white;
 	letter-spacing: 2px;
-	margin-top: 80px;
 	text-align: center;
 }
 #footer_text{
@@ -122,38 +119,101 @@ footer{
 .side_by_side div{
     display: inline-block;
 }
+.vertical_center{
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%);
+}
 
 /*-------------------------------------- END GLOBAL STYLES --------------------------------------*/
 
 
-/*LANDER PAGE*/
+
+/*-------------------------------------- LANDER PAGE --------------------------------------*/
+.portfolio_preview_updates{
+    width: 100%;
+    height: 300px;
+    display: inline-block;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+}
+.portfolio_preview_updates:hover{
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    transform: scale(1.3);
+}
+.portfolio_preview_bio{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 355px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.portfolio_preview_bio h2{
+    font-size: 30px;
+    color: white;
+    letter-spacing: 4px;
+    padding: 15px;
+    display: inline-block;
+    margin: 0px;
+}
+.portfolio_preview_bio p{
+    font-size: 15px;
+    color: white;
+    font-weight: 100;
+    margin: 0px;
+    display: inline-block;
+}
+.proj1{
+    background-color: rgb(237,114,92);
+}
+.proj2{
+    background-color: rgb(52,68,89);
+}
+.proj3{
+    background-color: rgb(165,219,219);
+}
+.proj4{
+    background-color: rgb(253,105,0);
+}
+.proj5{
+    background-color: rgb(245,134,30);
+}
+.proj6{
+    background-color: rgb(85,38,51);
+}
+.proj7{
+    background-color: rgb(52,68,89);
+}
+.proj8{
+    background-color: rgb(237,114,92);
+}
 #portfolio_container_new{
     text-align: center;
-    margin-top: 30px;
-    padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     background-color: #FDFDFD;
-    border-top: 5px dotted #D0CFCF;
+    border-top: 3px dotted #D0CFCF;
 }
 #portfolio_container_new p{
     letter-spacing: 3px;
 }
 .lander_container_new{
     width: 100%;
-    margin-bottom: 40px;
+    height: 600px;
     text-align: center;
-}
-#lander_city{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
 }
 #lander_greeting1_new{
     display: inherit;
-    margin-top: 10px;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 #lander_greeting2_new{
     display: inherit;
@@ -163,35 +223,6 @@ footer{
     width: 505px;
 }
 /*-------------------------------------- END LANDER PAGE --------------------------------------*/
-
-
-/*-------------------------------------- PORTFOLIO --------------------------------------*/
-#porfolio_container{
-	text-align: center;
-	margin-top: 30px;
-}
-.preview_image{
-	height: 250px;
-	width: 400px;
-	text-align: center;
-	margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    -webkit-box-shadow: 0px 0px 3px 1px rgba(196,196,196,1);
-	-moz-box-shadow: 0px 0px 3px 1px rgba(196,196,196,1);
-    -0-box-shadow: 0px 0px 3px 1px rgba(196,196,196,1);
-	box-shadow: 0px 0px 3px 1px rgba(196,196,196,1);
-}
-.preview_image:hover{
-    opacity: 0.6;
-    -webkit-transition: opacity .2s;
-    -moz-transition: opacity .2s;
-    -o-transition: opacity .2s;
-    transition: opacity .2s;
-}
-
-/*-------------------------------------- END PORTFOLIO --------------------------------------*/
 
 
 
@@ -245,6 +276,9 @@ footer{
     padding-right: 35px;
     color: #F39431;
     -webkit-transition: padding-left .2s, padding-right .2s;
+    -moz-transition: padding-left .2s, padding-right .2s;
+    -ms-transition: padding-left .2s, padding-right .2s;
+    -o-transition: padding-left .2s, padding-right .2s;
     transition: padding-left .2s, padding-right .2s;
 }
 
@@ -770,6 +804,20 @@ footer{
         width: 300px;
         font-size: 50px;
     }
+    .portfolio_preview_bio h2{
+        font-size: 25px;
+        margin: 0px;
+    }
+    .portfolio_preview_bio p{
+        font-size: 12px;
+    }
+    .portfolio_preview_updates:hover{
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+    }
 }
 /*-------------------------------------- END MEDIA QUERIES --------------------------------------*/
 
@@ -805,4 +853,3 @@ bar chart*/
 .dropoff-rate-bar{
     background-color: lightgreen; 
 }
-
