--- a/website.css
+++ b/website.css
@@ -129,6 +129,10 @@ footer{
 	width: 100%;
 	height: 50px;
 }
+.twenty_spacer{
+    width: 100%;
+    height: 20px;
+}
 .side_by_side{
     width: 100%;
     text-align: center;
@@ -141,6 +145,12 @@ footer{
     position: relative;
     transform: translateY(-50%);
 }
+.center{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.
 .horizontal_rule{
     width: 100%;
     height: 1px;
@@ -176,6 +186,9 @@ footer{
 }
 .lander_img img{
     width: 860px;
+}
+.left_aligned{
+    text-align: left;
 }
 /*-------------------------------------- END GLOBAL STYLES --------------------------------------*/
 
@@ -376,12 +389,12 @@ footer{
     background-color: white;
 }
 .posts_container{
-    width: 100%;
+    width: 700px;
     margin-left: auto;
     margin-right: auto;
 }
 .non_feature_post{
-	width: 49.7%;
+	width: 347px;
     height: 300px;
     background: url('imgs/floppy-disk-background.png');
     display: inline-block;
@@ -391,20 +404,25 @@ footer{
 }
 .feature_post{
     width: 100%;
-    height: 650px;
+    height: 450px;
     text-align: left;
-    background-color: rgb(46, 132, 167);
+    background-color: #0097A7;;
+    margin-left: auto;
+    margin-right: auto;
+}
+.feature_title_container{
+    width: 300px;
+    margin-left: 50px;
+    padding-top: 50px;
 }
 .feature_blog_post_title{
-    font-family: 'Lato';
-    font-size: 65px;
+    font-size: 55px;
     color: white;
     text-transform: uppercase;
     font-weight: 100;
-    position: relative;
-    top: 50%;
-    left: 100px;
-    letter-spacing: 3px;
+    font-family: 'Dharma';
+    letter-spacing: 2px;
+    font-style: italic;
 }
 .non_feature_blog_post_title{
     font-family: 'Lato';
@@ -418,15 +436,8 @@ footer{
     transform: translateY(-50%);
     text-align: center;
 }
-.feature_blog_post_title:hover{
-	color: #2F2F2F;
-	-webkit-transition: color .8s;
-	transition: color .8s;
-}
-.non_feature_blog_post_title:hover{
-	color: #D8625D;
-	-webkit-transition: color .8s;
-	transition: color .8s;
+.feature_blog_post_title:hover,.non_feature_blog_post_title:hover{
+	text-decoration: underline;
 }
 .post_filler{
 	width: 49.8%;
@@ -445,6 +456,9 @@ footer{
 }
 .post_title{
 	padding-bottom: 10px;
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .post_title h1{
     font-family: 'Dharma';
@@ -452,17 +466,18 @@ footer{
     font-size: 100px;
     margin-bottom: 10px;
     text-transform: uppercase;
+    letter-spacing: 2px;
 }
 .post_subtitle{
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-size: 14px;
+    font-size: 16px;
     width: 580px;
     margin-left: auto;
     margin-right: auto;
 }
 .post_body{
-	width: 500px;
+	width: 580px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
