--- a/website.css
+++ b/website.css
@@ -197,18 +197,14 @@ footer{
     width: 100%;
     height: 300px;
     display: inline-block;
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
+    -webkit-transition: all .6s;
+    -moz-transition: all .6s;
+    -ms-transition: all .6s;
+    -o-transition: all .6s;
+    transition: all .6s;
 }
 .portfolio_preview_updates:hover{
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
+    opacity: .8;
 }
 .portfolio_preview_bio{
     position: relative;
@@ -234,13 +230,13 @@ footer{
     display: inline-block;
 }
 .proj1{
-    background-color: rgb(237,114,92);
+    background-color: #00838F;
 }
 .proj2{
     background-color: rgb(52,68,89);
 }
 .proj3{
-    background-color: rgb(165,219,219);
+    background-color: rgb(113,175,190);
 }
 .proj4{
     background-color: rgb(253,105,0);
@@ -249,13 +245,13 @@ footer{
     background-color: rgb(245,134,30);
 }
 .proj6{
-    background-color: rgb(85,38,51);
+    background-color: #FF9800;
 }
 .proj7{
-    background-color: rgb(52,68,89);
+    background-color: #C2185B;
 }
 .proj8{
-    background-color: rgb(237,114,92);
+    background-color: #EC407A;
 }
 #portfolio_container_new{
     text-align: center;
@@ -720,8 +716,8 @@ footer{
     text-align: left;
 }
 #reach_out_text h2{
-    letter-spacing: 4px;
-    font-size: 32px;
+    letter-spacing: 6px;
+    font-size: 40px;
     border-left: 2px solid #f8f8f8;
     width: 500px;
     text-align: left;
